--- a/src/main/resources/static/web/pages/loan-application.html
+++ b/src/main/resources/static/web/pages/loan-application.html
@@ -49,29 +49,33 @@
           <div class="mb-4">
               <label for="amount" class="block text-sm font-medium text-gray-600">Amount:</label>
               <input v-model="amount" type="text" required placeholder="Enter amount" class="w-full px-4 py-2 rounded-md border border-gray-300">
-          </div>
-          <div class="mb-4">
-              <label for="account" class="block text-sm font-medium text-gray-600">Destination Account
-                  Number:</label>
-              <input v-model="accountDest" placeholder="Enter account" type="text" required class="w-full px-4 py-2 rounded-md border border-gray-300">
-          </div>
-          <div>
-              <button v-on:click="showModal()" type="button"
-                  class="w-full p-2 bg-orange-600 text-white rounded-md focus:outline-none focus:ring focus:border-blue-300">
-                  Request Loan</button>
-                  <div v-if="modalVisible" class="pt-2 gap-1">
-                    <h2 >Are you sure about requesting this loan?</h2>
-                    <div  class="flex flex-row gap-1 w-full justify-around ">
-                    <button type="button" @click.prevent="createLoans()"
-                        class=" w-1/4 p-2 bg-orange-600 text-white rounded-md focus:outline-none focus:ring
-                        focus:ring-orange-300">
+        </div>
+        <div>
+            <label class="block text-sm font-medium text-gray-600">Select your Target Account:</label>
+            <select v-model="selectedAccount" class="mt-1 mb-1 block w-full p-2 border  rounded-md ">
+                <option selected disabled value="1">Select Account</option>
+                <template v-if="data.length > 0" v-for="account in data">
+                    <option>{{account.number}}</option>
+                </template>
+            </select>
+        </div>
+        <div>
+            <button v-on:click="showModal()" type="button"
+                class="w-full p-2 mt-2 bg-orange-600 text-white rounded-md focus:outline-none focus:ring focus:border-blue-300">
+                Request Loan
+            </button>
+            <div v-if="modalVisible" class="pt-2 gap-1">
+                <h2>Are you sure about requesting this loan?</h2>
+                <div class="flex flex-row gap-1 w-full justify-around ">
+                    <button type="button" @click.prevent="createLoans()" class=" w-1/4 p-2 bg-orange-600 text-white rounded-md focus:outline-none focus:ring
+                                focus:ring-orange-300">
                         Yes</button>
                     <button type="button" v-on:click="closeModal()"
                         class="w-1/4 p-2 bg-orange-600 text-white rounded-md focus:outline-none focus:ring focus:ring-orange-300">
                         No</button>
-                    </div>
                 </div>
-          </div>
+            </div>
+        </div>
       </form>
   </main>
     <footer class=" bg-black ">
